# geothermal-orc

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: _build_demo.py  _finalize_demo.py  demo.ipynb
src/geothermal_orc/: __init__.py  cycle.py  economics.py  finance.py  fluids.py  geothermal.py  heat_exchanger.py  mixtures.py  optimization.py  plant.py  thermo.py  transcritical.py
tests/: test_benchmarks.py  test_cycle.py  test_economics.py  test_finance.py  test_fluids.py  test_geothermal.py  test_heat_exchanger.py  test_mixtures.py  test_optimization.py  test_plant.py  test_thermo.py  test_transcritical.py
