[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geothermal-orc"
version = "0.1.0"
description = "Literature-grade binary (Organic Rankine Cycle) geothermal power-cycle simulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Khalil Buckmire" }]
keywords = ["geothermal", "ORC", "Rankine", "thermodynamics", "CoolProp", "energy"]
dependencies = [
    "CoolProp>=6.4",
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter", "nbconvert", "ipykernel", "ipywidgets>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
